--- a/main.html
+++ b/main.html
@@ -220,8 +220,8 @@
         </table>
     </div>
 
-    <!-- Modal para visualização de código -->
-    <div id="codeModal" class="modal">
+     <!-- Modal para visualização de código -->
+     <div id="codeModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <pre id="codeContent"></pre>
@@ -241,9 +241,17 @@
             <button onclick="updateCode()">Save Changes</button>
         </div>
     </div>
+    
+   <!-- Navegação de página -->
+   <div id="pagination">
+    <button onclick="loadPreviousPage()" id="prevPageBtn" disabled>Anterior</button>
+    <button onclick="loadNextPage()" id="nextPageBtn">Próxima</button>
+</div>
+</div>
 
-    <script>
-        let editingCodeId = null;
+<script>
+
+let editingCodeId = null;
 
         function fetchCodes() {
             fetch("http://localhost:8080/codigos/", {
@@ -438,6 +446,175 @@
         alert("An error occurred during the search: " + error.message);
     }
 }
-    </script>
+    
+
+
+
+let currentPage = 0;  // Página atual
+const pageSize = 5;   // Quantidade de itens por página
+
+// Função para buscar códigos
+function fetchCodes(page = 0) {
+    fetch(`http://localhost:8080/codigos/?page=${page}&size=${pageSize}`, {
+        method: "GET",
+        headers: {
+            "Authorization": "Bearer " + localStorage.getItem("auth_token"),
+            "Content-Type": "application/json"
+        }
+    })
+    .then(response => {
+        if (!response.ok) {
+            if (response.status === 401 || response.status === 403) {
+                localStorage.removeItem("auth_token");
+                window.location.href = "index.html";
+            }
+            throw new Error("Erro ao buscar códigos");
+        }
+        return response.json();
+    })
+    .then(data => {
+    console.log("Resposta da API:", data);  // Verifique o que está sendo retornado
+
+    const tableBody = document.querySelector("#codesTable tbody");
+    tableBody.innerHTML = "";
+
+    // Acesse o array dentro da chave 'content'
+    const codes = data.content;
+
+    if (Array.isArray(codes)) {
+        if (codes.length === 0) {
+            tableBody.innerHTML = "<tr><td colspan='7'>Nenhum código encontrado.</td></tr>";
+            return;
+        }
+
+        codes.forEach(code => {
+            const row = document.createElement("tr");
+            row.innerHTML = `
+                <td>${code.id}</td>
+                <td>${code.linguagem}</td>
+                <td>${code.descricao}</td>
+                <td><img src="${code.imgUrl}" alt="Preview" style="width: 100px; height: auto; border-radius: 4px;"></td>
+                <td><button onclick="viewCode('${code.id}', \`${encodeURIComponent(code.codigo)}\`)" class="view-btn">Visualizar</button></td>
+                <td><button onclick="deleteCode('${code.id}')" class="delete-btn">Deletar</button></td>
+                <td><button onclick="editCode('${code.id}', '${code.linguagem}', '${code.descricao}', '${code.imgUrl}', \`${encodeURIComponent(code.codigo)}\`)" class="edit-btn">Atualizar</button></td>
+            `;
+            tableBody.appendChild(row);
+        });
+    } else {
+        // Se 'content' não for um array, logue o erro
+        console.error("A chave 'content' não é um array. Estrutura da resposta:", data);
+    }
+})
+
+    .catch(error => console.error(error));
+}
+
+
+// Função para carregar a página anterior
+function loadPreviousPage() {
+    if (currentPage > 0) {
+        currentPage--;
+        fetchCodes(currentPage);
+        updatePaginationButtons();
+    }
+}
+
+// Função para carregar a próxima página
+function loadNextPage() {
+    currentPage++;
+    fetchCodes(currentPage);
+    updatePaginationButtons();
+}
+
+// Função para atualizar os botões de navegação
+function updatePaginationButtons() {
+    document.getElementById("prevPageBtn").disabled = currentPage === 0;
+    document.getElementById("nextPageBtn").disabled = false; // Aqui você pode definir se a próxima página deve ser desabilitada com base em uma lógica de última página
+}
+
+// Função para excluir um código
+function deleteCode(id) {
+    fetch(`http://localhost:8080/codigos/${id}`, {
+        method: "DELETE",
+        headers: {
+            "Authorization": "Bearer " + localStorage.getItem("auth_token"),
+            "Content-Type": "application/json"
+        }
+    })
+    .then(response => {
+        if (!response.ok) {
+            alert("Erro ao excluir código.");
+            return;
+        }
+        alert("Código excluído com sucesso!");
+        fetchCodes(currentPage); // Recarrega a lista após excluir
+    })
+    .catch(error => {
+        console.error("Erro ao excluir código:", error);
+        alert("Erro ao excluir código.");
+    });
+}
+// Função para buscar códigos
+function searchCodes() {
+    const keyword = document.getElementById("searchInput").value;
+
+    fetch(`http://localhost:8080/codigos/search?keyword=${keyword}&page=${currentPage}&size=${pageSize}`, {
+        method: "GET",
+        headers: {
+            "Authorization": "Bearer " + localStorage.getItem("auth_token"),
+            "Content-Type": "application/json"
+        }
+    })
+    .then(response => {
+        if (!response.ok) {
+            throw new Error("Erro ao buscar códigos");
+        }
+        return response.json();
+    })
+    .then(data => {
+        const tableBody = document.querySelector("#codesTable tbody");
+        tableBody.innerHTML = "";
+
+        const codes = data.content;
+        if (Array.isArray(codes) && codes.length > 0) {
+            codes.forEach(code => {
+                const row = document.createElement("tr");
+                row.innerHTML = `
+                    <td>${code.id}</td>
+                    <td>${code.linguagem}</td>
+                    <td>${code.descricao}</td>
+                    <td><img src="${code.imgUrl}" alt="Preview" style="width: 100px; height: auto; border-radius: 4px;"></td>
+                    <td><button onclick="viewCode('${code.id}', \`${encodeURIComponent(code.codigo)}\`)" class="view-btn">Visualizar</button></td>
+                    <td><button onclick="deleteCode('${code.id}')" class="delete-btn">Deletar</button></td>
+                    <td><button onclick="editCode('${code.id}', '${code.linguagem}', '${code.descricao}', '${code.imgUrl}', \`${encodeURIComponent(code.codigo)}\`)" class="edit-btn">Atualizar</button></td>
+                `;
+                tableBody.appendChild(row);
+            });
+        } else {
+            tableBody.innerHTML = "<tr><td colspan='7'>Nenhum código encontrado.</td></tr>";
+        }
+    })
+    .catch(error => {
+        console.error(error);
+        alert("Erro ao buscar códigos.");
+    });
+}
+
+
+
+document.addEventListener("DOMContentLoaded", () => {
+    if (!localStorage.getItem("auth_token")) {
+        window.location.href = "index.html";
+    } else {
+        fetchCodes(currentPage);  // Carrega a primeira página
+    }
+});
+
+// Função de logout
+function logout() {
+    localStorage.removeItem("auth_token");
+    window.location.href = "index.html";
+}
+</script>
 </body>
 </html>
